syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message CustomerAdditionalData {
    bool IsAddressWhispererUsed = 1;
    bool HasRelationshipWithKB = 2;
    bool HasRelationshipWithKBEmployee = 3;
    bool HasRelationshipWithCorporate = 4;
    bool IsPoliticallyExposed = 5;
    bool IsUSPerson = 6;
    LegalCapacityData LegalCapacity = 7;
    CustomerIdentificationObject CustomerIdentification = 8;
}

message LegalCapacityData {
    google.protobuf.Int32Value RestrictionTypeId = 1;
    cis.types.NullableGrpcDate RestrictionUntil = 2;
}

message CustomerIdentificationObject {
    google.protobuf.Int32Value IdentificationMethodId = 1;
    cis.types.NullableGrpcDate IdentificationDate = 2;
    google.protobuf.StringValue CzechIdentificationNumber = 3;
}