syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Messages/FlowSwitch.proto";

message SetFlowSwitchesRequest {
	int32 SalesArrangementId = 1;

	repeated EditableFlowSwitch FlowSwitches = 2;
}

